--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "axios": "^0.24.0",
     "history": "^4.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
